[package]
name = "ybsc"
version = "0.1.2"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license-file = "LICENSE.txt"
readme = "README.md"
description = "Simple, no-nonsense Yale Bright Star Catalog binary file parser"
repository = "https://github.com/berke/ybsc"

[dependencies]
anyhow = { version = "^1.0" }