[package]
name = "ybsc"
version = "0.1.3"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "Simple, no-nonsense Yale Bright Star Catalog binary file parser"
repository = "https://github.com/berke/ybsc"

[dependencies]
anyhow = { version = "^1.0" }