[package]
name = "ybsc"
version = "0.1.4"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "Simple, no-nonsense Yale Bright Star Catalog binary file parser"
repository = "https://github.com/berke/ybsc"

[dependencies]
anyhow = { version = "^1.0" }
serde = { version = "^1.0", features = ["serde_derive"], optional = true }

[features]
serde = ["dep:serde"]